# mpesconvert

./: LICENSE  README.md  environment.yml  setup.cfg
src/mpesconvert/: FileConverter.py  test.py
tutorial/: Tutorial.ipynb  metadata.yaml
