[metadata]
name = mpesconvert
version = 0.0.1
author = Muhammad Zain Sohail
author_email = zainsohail04@gmail.com
description = This package converts the data from FLASH and FHI to the mpes-nexus format.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mpes-kit/mpesconvert
project_urls =
    Bug Tracker = https://github.com/mpes-kit/mpesconvertissues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src